delete scrollbar when select product_price (issue #271)

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,7 +58,7 @@ img {
     width: 960px;
     margin: 0 auto;
     position: relative;
-    overflow:auto;
+    overflow:hidden;
 }
 
 .dashboard_container {
